--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,8 @@ edition = "2018"
 clap = "2.32"
 colored = "1.6"
 failure = "0.1.3"
+walkdir = "2"
+pulldown-cmark = "0.2.0"
+tera = "0.11.20"
+serde = "1.0"
+serde_derive = "1.0"
