--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ colored = "1.6"
 failure = "0.1.3"
 walkdir = "2"
 pulldown-cmark = "0.2.0"
+rocket = "0.4.0"
+rocket_contrib = "0.4.0"
 tera = "0.11.20"
 serde = "1.0"
 serde_derive = "1.0"
