Install rustfmt with cargo instead of rustup

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - run:
           name: Check code format
           command: |
-            rustup component add rustfmt-preview
+            cargo install rustfmt-nightly --force
             rustfmt --version
             cargo fmt
       - run:
